Fix username saving and allow to read old messages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="calendar-title">Calendário das Mensagens</h1>
     <!-- Adicione o campo de entrada e o botão aqui -->
-    <input type="text" id="username" placeholder="Que nome deseja dar seu calendário?">
+    <input type="text" id="username" placeholder="Que nome deseja dar ao seu calendário?">
     <button id="saveName">Salvar</button>
     <div class="calendar">
         <div class="door" id="door1">1</div>
